[package]
name = "cio-evm-imports"
version = "0.1.0"
edition = "2018"

[lib]
name = "cio_evm_imports"
path = "src/lib.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
serde = "1.0.198"
serde_json = "1.0.116"
cio-response-types = { git = "https://github.com/composibleIO/cio-response-types", branch = "main" }
ethabi = "18.0.0"
ethers-core = "2.0.14"
